--- a/requirements.txt
+++ b/requirements.txt
@@ -1,110 +1,296 @@
+aiofiles==23.1.0
 aiohttp==3.8.4
 aiosignal==1.3.1
-altair==5.0.1
+altair==4.2.2
+ansi2html==1.8.0
 anyio==3.7.0
+apturl==0.5.2
+astor==0.8.1
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==23.1.0
+awscli==1.22.34
+azure-core==1.28.0
+azure-storage-blob==12.17.0
+backcall==0.2.0
 backoff==2.2.1
+bcrypt==3.2.0
 beautifulsoup4==4.12.2
-blinker==1.6.2
+blinker==1.4
+boto3==1.26.88
+botocore==1.29.88
+Brlapi==0.8.3
 cachetools==5.3.1
-certifi==2023.5.7
+category-encoders==2.6.0
+certifi==2020.6.20
+cffi==1.15.1
+chardet==4.0.0
 charset-normalizer==3.1.0
-chromadb==0.3.26
-click==8.1.3
-clickhouse-connect==0.6.4
+chromadb==0.3.25
+click==8.0.3
+clickhouse-connect==0.5.25
+cloudpickle==2.2.1
+colorama==0.4.4
 coloredlogs==15.0.1
-dataclasses-json==0.5.8
+comm==0.1.2
+command-not-found==0.3
+contourpy==1.0.7
+cryptography==41.0.1
+cupshelpers==1.0
+cycler==0.11.0
+Cython==0.29.33
+dash==2.9.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dataclasses-json==0.5.7
+dbus-python==1.2.18
+debugpy==1.6.6
 decorator==5.1.1
+defer==1.0.6
+Deprecated==1.2.13
+deprecation==2.1.0
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
 dnspython==2.3.0
-duckdb==0.8.1
+docutils==0.17.1
+duckdb==0.8.0
+duplicity==0.8.21
 email-validator==2.0.0.post2
+entrypoints==0.4
 exceptiongroup==1.1.1
-fastapi==0.98.0
-Flask==2.3.2
+executing==1.2.0
+faiss-cpu==1.7.4
+fastapi==0.95.2
+fasteners==0.14.1
+fastjsonschema==2.16.3
+ffmpy==0.3.0
+filelock==3.12.1
+Flask==2.2.3
 Flask-Cors==4.0.0
 flatbuffers==23.5.26
+fonttools==4.39.2
 frozenlist==1.3.3
+fsspec==2023.6.0
+future==0.18.2
+GDAL==3.6.4
 gitdb==4.0.10
 GitPython==3.1.31
+gobject==0.1.0
+google-ai-generativelanguage==0.2.0
+google-api-core==2.11.1
+google-auth==2.20.0
+google-generativeai==0.1.0
+googleapis-common-protos==1.59.1
 googlesearch-python==1.2.3
+gradio==3.34.0
+gradio_client==0.2.6
 greenlet==2.0.2
+grpcio==1.54.2
+grpcio-status==1.48.2
 h11==0.14.0
 hnswlib==0.7.0
+httpcore==0.17.2
+httplib2==0.20.2
 httptools==0.5.0
+httpx==0.24.1
+huggingface-hub==0.15.1
 humanfriendly==10.0
-idna==3.4
-importlib-metadata==6.7.0
+idna==3.3
+imbalanced-learn==0.10.1
+importlib-metadata==6.1.0
+ipykernel==6.21.3
+ipython==8.14.0
+ipywidgets==8.0.5
+isodate==0.6.1
 itsdangerous==2.1.2
+jedi==0.18.2
+jeepney==0.7.1
 Jinja2==3.1.2
+jmespath==1.0.1
+joblib==1.2.0
 jsonschema==4.17.3
-langchain==0.0.219
-langchainplus-sdk==0.0.17
+jupyter-dash==0.4.2
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyterlab-widgets==3.0.6
+kaleido==0.2.1
+keyring==23.5.0
+kiwisolver==1.4.4
+langchain==0.0.180
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lightgbm==3.3.5
+linkify-it-py==2.0.2
+llvmlite==0.39.1
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.9.1
 lz4==4.3.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+macaroonbakery==1.3.1
+Mako==1.1.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.3.3
 mdurl==0.1.2
 monotonic==1.6
+more-itertools==8.10.0
 mpmath==1.3.0
 multidict==6.0.4
 mypy-extensions==1.0.0
+nbformat==5.8.0
+nest-asyncio==1.5.6
+netifaces==0.11.0
+numba==0.56.4
 numexpr==2.8.4
-numpy==1.25.0
-onnxruntime==1.15.1
+numpy==1.24.1
+oauthlib==3.2.0
+olefile==0.46
+onnxruntime==1.15.0
 openai==0.27.8
 openapi-schema-pydantic==1.2.4
+opencv-python==4.7.0.72
+orjson==3.8.8
 overrides==7.3.1
-packaging==23.1
-pandas==2.0.2
+packaging==23.0
+pandas==1.5.2
+pandasai==0.2.15
+paramiko==2.9.3
+parso==0.8.3
+patsy==0.5.3
+pdfminer.six==20221105
+pdfplumber==0.9.0
+pexpect==4.8.0
 phonenumbers==8.13.15
-Pillow==9.5.0
+pickleshare==0.7.5
+Pillow==9.4.0
+plotly==5.13.1
+plotly-resampler==0.8.3.2
+pmdarima==2.0.3
 posthog==3.0.1
-protobuf==4.23.3
-pulsar-client==3.2.0
+prompt-toolkit==3.0.38
+proto-plus==1.22.2
+protobuf==3.20.3
+psutil==5.9.4
+psycopg2==2.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==12.0.1
-pydantic==1.10.9
+pyasn1==0.4.8
+pyasn1-modules==0.3.0
+pycairo==1.20.1
+pycaret==3.0.0
+pycparser==2.21
+pycups==2.0.1
+pydantic==1.10.8
 pydeck==0.8.1b0
+pydub==0.25.1
 Pygments==2.15.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
 Pympler==1.0.1
-pypdf==3.11.1
+PyMuPDF==1.22.3
+PyMySQL==1.0.2
+PyNaCl==1.5.0
+pyod==1.0.9
+pyparsing==2.4.7
+pypdf==3.9.0
+PyQt5==5.14.1
+pyqt5-plugins==5.15.9.2.3
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.12.1
+pyqt5-tools==5.15.9.3.3
+pyRFC3339==1.1
 pyrsistent==0.19.3
+pytesseract==0.3.10
+python-apt==2.4.0+ubuntu2
 python-dateutil==2.8.2
+python-debian==0.1.43+ubuntu1.1
 python-dotenv==1.0.0
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-regex==2023.6.3
-requests==2.31.0
+python-multipart==0.0.6
+pytz==2022.7
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==25.0.0
+qt5-applications==5.15.2.2.3
+qt5-tools==5.15.2.1.3
+regex==2023.5.5
+reportlab==3.6.8
+requests==2.28.2
+retrying==1.3.4
 rich==13.4.2
+roman==3.3
+rsa==4.8
+s3transfer==0.6.0
+schemdraw==0.16
+scikit-learn==1.2.2
+scikit-plot==0.3.7
+scipy==1.10.1
+SecretStorage==3.3.1
+semantic-version==2.10.0
 six==1.16.0
+sktime==0.16.1
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.4.1
-SQLAlchemy==2.0.17
+SQLAlchemy==2.0.15
+ssh-import-id==5.11
+stack-data==0.6.2
 starlette==0.27.0
-streamlit==1.23.1
+statsmodels==0.13.5
+streamlit==1.22.0
+streamlit-chat==0.0.2.2
 sympy==1.12
+systemd-python==234
+tbats==1.1.2
 tenacity==8.2.2
+threadpoolctl==3.1.0
 tiktoken==0.4.0
 tokenizers==0.13.3
 toml==0.10.2
 toolz==0.12.0
-tornado==6.3.2
+tornado==6.2
 tqdm==4.65.0
+trace-updater==0.0.9
+traitlets==5.9.0
 typing-inspect==0.9.0
-typing_extensions==4.6.3
+typing_extensions==4.6.2
 tzdata==2023.3
-tzlocal==4.3.1
-urllib3==2.0.3
+tzlocal==5.0.1
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+uc-micro-py==1.0.2
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.5
+usb-creator==0.3.7
 uvicorn==0.22.0
 uvloop==0.17.0
+v==1
 validators==0.20.0
+wadllib==1.3.6
+Wand==0.6.11
 watchdog==3.0.0
 watchfiles==0.19.0
+wcwidth==0.2.6
 websockets==11.0.3
-Werkzeug==2.3.6
+Werkzeug==2.2.3
+widgetsnbextension==4.0.6
+wrapt==1.15.0
+wurlitzer==3.0.3
+xdg==5
+xgboost==1.7.4
+xkit==0.0.0
+xxhash==3.2.0
 yarl==1.9.2
-zipp==3.15.0
+yellowbrick==1.5
+youtube-transcript-api==0.6.0
+zipp==1.0.0
 zstandard==0.21.0
